--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,12 @@ build/
 !**/src/test/**/build/
 
 ### IntelliJ IDEA ###
-.idea/*
+.idea/inspectionProfiles/
+.idea/.gitignore
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/kotlinc.xml
 .idea/modules.xml
 .idea/jarRepositories.xml
 .idea/compiler.xml
