--- a/.gitignore
+++ b/.gitignore
@@ -4,21 +4,4 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
-### IntelliJ IDEA ###
-.idea
-.idea/inspectionProfiles/
-.idea/.gitignore
-.idea/gradle.xml
-.idea/misc.xml
-.idea/vcs.xml
-.idea/kotlinc.xml
-.idea/modules.xml
-.idea/jarRepositories.xml
-.idea/compiler.xml
-.idea/libraries/
-*.iws
-*.iml
-*.ipr
-out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+.idea/
